--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@opra/url",
+  "name": "@opra/i18n",
   "version": "0.0.1",
-  "description": "Opra URL parser/builder",
+  "description": "Opra internationalization package",
   "author": "Panates",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/panates/opra.git",
-    "directory": "packages/url"
+    "directory": "packages/i18n"
   },
   "scripts": {
     "compile": "tsc",
@@ -15,25 +15,21 @@
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json && tsc-esm -p tsconfig-build-esm.json",
-    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/url | cp ../../package.cjs.json ../../build/url/cjs/package.json",
+    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/i18n | cp ../../package.cjs.json ../../build/i18n/cjs/package.json",
     "lint": "eslint \"{src,test}/**/*.ts\" --no-error-on-unmatched-pattern",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "check": "madge --circular src/**/*",
+    "check": "dpdm src/** --exit-code circular:1 --tree false --warning -T false",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
-    "clean:dist": "rimraf ../../build/url",
-    "clean:cover": "rimraf ../../coverage/url",
-    "antlr": "antlr4ts -visitor -no-listener src/filter/antlr/OpraFilter.g4"
+    "clean:dist": "rimraf ../../build/i18n",
+    "clean:cover": "rimraf ../../coverage/i18n"
   },
   "dependencies": {
-    "antlr4": "^4.10.1",
-    "luxon": "^2.3.2",
     "fast-tokenizer": "^0.1.1"
   },
-  "devDependencies": {
-    "@types/luxon": "^2.3.1",
-    "antlr4ts-cli": "^0.5.0-alpha.4"
+  "peerDependencies": {
+    "i18next": ">=^21.1.1"
   },
   "type": "module",
   "main": "cjs/index.js",
