--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -19,17 +19,16 @@
     "lint": "eslint \"{src,test}/**/*.ts\" --no-error-on-unmatched-pattern",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "check": "dpdm src/** --exit-code circular:1 --tree false --warning -T false",
+    "check": "madge --circular src/**/*",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/i18n",
     "clean:cover": "rimraf ../../coverage/i18n"
   },
   "dependencies": {
-    "fast-tokenizer": "^0.1.1"
   },
   "peerDependencies": {
-    "i18next": ">=^21.1.1"
+    "i18next": ">=21.0.0"
   },
   "type": "module",
   "main": "cjs/index.js",
