--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -26,6 +26,8 @@
     "clean:cover": "rimraf ../../coverage/i18n"
   },
   "dependencies": {
+    "ts-gems": "^2.0.0",
+    "fast-tokenizer": "^1.1.0"
   },
   "peerDependencies": {
     "i18next": ">=21.0.0"
