--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -16,7 +16,7 @@
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json && tsc-esm -p tsconfig-build-esm.json",
     "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/i18n | cp ../../package.cjs.json ../../build/i18n/cjs/package.json",
-    "lint": "eslint \"{src,test}/**/*.ts\" --no-error-on-unmatched-pattern",
+    "lint": "eslint {src,test}/**/*.ts --no-error-on-unmatched-pattern",
     "test": "jest",
     "cover": "jest --collect-coverage",
     "check": "madge --circular src/**/*",
