--- a/packages/i18n/tsconfig.json
+++ b/packages/i18n/tsconfig.json
@@ -4,6 +4,6 @@
     "baseUrl": "./",
     "rootDir": "src"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "test", "bin"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules", "dist", "bin"]
 }
