--- a/packages/i18n/test/tsconfig.json
+++ b/packages/i18n/test/tsconfig.json
@@ -4,10 +4,11 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "strictNullChecks": false,
-    "strict": false,
     "noEmit": true,
     "sourceMap": true,
-    "noEmitOnError": false
+    "baseUrl": "./",
+    "paths": {
+      "@opra/*": ["../../*/src"],
+    }
   }
 }
