--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
+    "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/i18n",
     "clean:cover": "rimraf ../../coverage/i18n"
