Bulk alpha commit

--- a/packages/i18n/tsconfig-build-esm.json
+++ b/packages/i18n/tsconfig-build-esm.json
@@ -6,7 +6,7 @@
     "outDir": "../../build/i18n/esm",
     "sourceMap": false,
     "noEmit": false,
-    "declaration": false
+    "declaration": true
   },
   "include": ["src"]
 }
