before changing prepareExecutionContexts

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -25,9 +25,9 @@
     "clean:cover": "rimraf ../../coverage/i18n"
   },
   "dependencies": {
-    "ts-gems": "^2.2.0",
     "fast-tokenizer": "^1.1.0",
-    "i18next": "^21.9.1"
+    "i18next": "^21.9.1",
+    "ts-gems": "^2.2.0"
   },
   "type": "module",
   "main": "cjs/index.js",
