--- a/packages/core/i18n/en/error.json
+++ b/packages/core/i18n/en/error.json
@@ -12,7 +12,7 @@
   "RESPONSE_VALIDATION": "Response validation failed",
   "RESOURCE_NOT_FOUND": "Resource not found: '{{resource}}'",
   "RESOURCE_CONFLICT": "There is already an other {{resource}} resource with same field values ({{fields}})",
-  "RESOLVER_FORBIDDEN": "The {{resource}} endpoint does not accept '{{operation}}' operations",
+  "RESOLVER_FORBIDDEN": "The {{resource}} endpoint does not accept '{{endpoint}}' operations",
   "UNKNOWN_FIELD": "Unknown field '{{field}}'",
   "UNACCEPTED_SORT_FIELD": "Field '{{field}}' is not available for sort operation",
   "UNACCEPTED_FILTER_FIELD": "Field '{{field}}' is not available for filter operation",
