--- a/packages/core/i18n/en/error.json
+++ b/packages/core/i18n/en/error.json
@@ -8,9 +8,10 @@
   "NOT_FOUND": "Not found",
   "UNAUTHORIZED": "You have not been authenticated to perform this action",
   "UNPROCESSABLE_ENTITY": "Unprocessable entity",
+  "SOURCE_NOT_FOUND": "Source not found",
   "REQUEST_VALIDATION": "Request validation failed",
   "RESPONSE_VALIDATION": "Response validation failed",
-  "RESOURCE_NOT_FOUND": "Resource not found: '{{resource}}'",
+  "RESOURCE_NOT_FOUND": "Resource not found",
   "RESOURCE_CONFLICT": "There is already an other {{resource}} resource with same field values ({{fields}})",
   "RESOLVER_FORBIDDEN": "The {{resource}} endpoint does not accept '{{endpoint}}' operations",
   "UNKNOWN_FIELD": "Unknown field '{{field}}'",
