Improvements and fixes

--- a/packages/core/i18n/en/error.json
+++ b/packages/core/i18n/en/error.json
@@ -12,7 +12,8 @@
   "RESPONSE_VALIDATION": "Response validation failed",
   "RESOURCE_NOT_FOUND": "Resource not found",
   "RESOURCE_CONFLICT": "There is already an other {{resource}} resource with same field values ({{fields}})",
-  "OPERATION_FORBIDDEN": "The {{resource}} endpoint does not accept '{{endpoint}}' operations",
+  "OPERATION_FORBIDDEN": "The {{resource}} resource does not accept '{{operation}}' operations",
+  "ACTION_NOT_FOUND": "The {{resource}} resource doesn't have an action named '{{action}}'",
   "UNKNOWN_FIELD": "Unknown field '{{field}}'",
   "UNACCEPTED_SORT_FIELD": "Field '{{field}}' is not available for sort operation",
   "UNACCEPTED_FILTER_FIELD": "Field '{{field}}' is not available for filter operation",
